foundations/flex/04-flex-information/style.css
body {
  font-family: 'Courier New', Courier, monospace;
}

img {
  width: 100px;
  height: 100px;
}

.plant-info{
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.plant{
  width: 200px;
  flex-wrap: wrap;
  justify-content: center;
  gap: 52px;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}


.title {
  font-size: 36px;
  font-weight: 900;
  display: flex;
  justify-content: center;
  padding-bottom: 32px;
}

/* do not edit this footer */
.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 52px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #eee;
}

